--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,9 +34,15 @@ html{
 	height: 100%;
 }
 
-h2, h3{
+h2{
 	color: #4199d7;
 	font-family: amaranth;
+	text-align: center;
+}
+
+h3{
+	color: #4199d7;
+	font-family: yan;
 	text-align: center;
 }
 
@@ -44,7 +50,10 @@ h2, h3{
 @media all and (max-width: 767px){
 
 	h1 {
-		-webkit-text-stroke: 5%;
+		text-shadow: 0 0 2px #000; /* horizontal-offset vertical-offset 'blur' colour */
+		-moz-text-shadow: 0 0 2px #000;
+		-webkit-text-shadow: 0 0 2px #000;
+		
 		font-size: 300%;
 		font-family: amaranth;
 	}
@@ -54,8 +63,7 @@ h2, h3{
 @media all and (min-width: 768px){
 
 	h1 {
-		-webkit-text-stroke: 5%;
-		font-size: 1000%;
+		font-size: 600%;
 		font-family: amaranth;
 	}
 }
@@ -135,7 +143,7 @@ h2, h3{
 
 .hero {
 
-	background-image: url("../img/tempHeroImage.jpg");
+	background-image: url("../img/heroImg.jpg");
 
 	/* Need to calculate the height of the image to fit with the navbar.
 	 * The operation to achieve this is different for different browsers*/
@@ -163,50 +171,74 @@ h2, h3{
     color: #4199d7;
 }
 
+.hero-text::after > h1{
+	font-size: 330%;
+	color: #000;
+}
+
+.hero-text::after{
+	content: '';
+	text-align: center;
+    position: absolute;	
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+	
+}
+
 /* DATAVIZ *********************************************************
  ******************************************************************/
 
 
-.percentReadImg, .numberReadImg, .articleSourceImg, .treeImg{
-	height: 90%;	
+.percentReadImg, .numberReadImg, .articleSourceImg, .sourceNameImg, .fullImg{ 
 	max-width: 100%;
+	max-height: auto;
 	display: block;
     margin: auto;
 }
-.sourceNameImg{
-	height: 70%;	
-	max-width: 100%;
-	display: block;
-    margin: auto;
 
+.treeImg{
+	max-width: 100%;
+	max-height: auto;
+	display: block;
+	align-items: auto;
 }
 
 .legendTitle, .treeTitle{
-	max-height: 100%;	
+	max-width: 100%;	
+	max-height: auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
-.percentRead, .numberRead, .articleSource, .tree{
-	max-height: 100%;
+.percentRead, .numberRead, .articleSource, .sourceName, .tree{
+	max-width: 100%;
+	max-height: auto;
 	display: flex;
 	flex-direction: column;	
 	justify-content: center;
 	align-items: center;
 }
 
-.legend{ grid-area: legend; }
+.full{
+	display: none;
+}
+
+
+.legendTitle{ grid-area: legendTitle; }
 .percentRead{ grid-area: percentRead; }
 .numberRead{ grid-area: numberRead; }
 .articleSource{ grid-area: articleSource; }
 .sourceName{ grid-area: sourceName; }
 .treeTitle{ grid-area: treeTitle; }
 .tree{ grid-area: tree;	}
+.full{ grid-area: full;}
 
 /* Small Screens */
-h2{ font-size: 150%; }
-h3{ font-size: 80%; }
+h2{ font-size: 200%; }
+h3{ font-size: 100%; }
 
 #dataviz{
 	padding-top: 40px;
@@ -214,22 +246,23 @@ h3{ font-size: 80%; }
 	height: 1190px;	
 }
 
+
+
 .grid {
     display: grid;
 	width: 100%;
-	height: 1190px; 
-	/* sets the height of each row */
-	grid-template-rows: 50px 100px 100px 200px 260px 50px 300px ;
+	height: 1100px; 	
 	/* defines the grid areas */
     grid-template-areas: 
-        "legend" 
+        "legendTitle" 
         "percentRead" 
         "numberRead" 
         "articleSource"
 		"sourceName"
 		"treeTitle"
 		"tree";
-	grid-gap: 10px;	
+	grid-gap: 20px;	
+
 }
 
 /* Large Screens */
@@ -244,21 +277,37 @@ h3{ font-size: 80%; }
 		height: 770px;	
 	}
 
-    .grid {
-		height: 100%;
-        /* sets the width of each column */
-        grid-template-columns: 1fr 3.5fr;
-        /* sets the height of each row */
-		grid-template-rows: 1fr 1fr 1fr 2fr 2fr;
+	.percentRead, .numberRead, .articleSource, .sourceName, .tree{
+		display: none;
+	}
+	
+	.full{
+		max-width: 100%;
+		max-height: auto;
+		display: flex;
+		flex-direction: column;	
+		justify-content: center;
+		align-items: center;
+	}
+
+    .grid {	
+		width: 100%;
+		height: 85%;	
+        /* column width using golden ratio*/
+        grid-template-columns: 1fr 3.234fr;
+		grid-template-rows: auto;
         /* defines the grid areas */
         grid-template-areas: 
-            "legend		treeTitle" 
-			"percentRead	tree"
-			"numberRead		tree" 
-			"articleSource	tree"
-			"sourceName		tree";
+			"legendTitle treeTitle"
+			"full full";
 		grid-gap: 20px;
+
 	}
+	
+	
+
+	
+	
 }
 
 
